# Detectra-nextgen-xdr

./: README.md  XDR_PLATFORM_BLUEPRINT.md  pyproject.toml
apps/api/app/: main.py
apps/api/app/auth/: deps.py
apps/api/app/core/: config.py
apps/api/app/db/: repository.py
apps/api/app/routes/: alerts.py  incidents.py  playbooks.py
apps/api/app/schemas/: models.py
apps/api/app/services/: alert_service.py  incident_service.py
rules/correlation/: failed_login_then_priv_esc.yml
rules/playbooks/: contain_suspicious_powershell.yml
rules/sigma/: suspicious_powershell_encoded.yml
services/detection/correlation_engine/: engine.py
services/detection/rule_engine/: evaluator.py  sigma_loader.py
services/detection/ueba/: anomaly.py
services/response_engine/: playbook_runner.py
tests/: test_api.py  test_detection.py
