[project]
name = "detectra-nextgen-xdr"
version = "0.1.0"
description = "MVP Cortex XDR-like platform scaffold"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.7.0",
  "pyyaml>=6.0.1",
  "python-jose[cryptography]>=3.3.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
